--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,28 +1,31 @@
-name: Generate Snake Animation
+name: Generate Snake
 
 on:
-  schedule: # daily run at 12am UTC
-    - cron: "0 0 * * *"
-  workflow_dispatch: # manually trigger
+  schedule:
+    - cron: "0 */12 * * *"  # runs every 12 hours
+  workflow_dispatch:        # allow manual run
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repository
+      - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Generate Snake
+      - name: Generate Snake Animation
         uses: Platane/snk@v3
         with:
-          github_user_name: aakashkum143
-          outputs: dist/snake.svg
+          github_user_name: Aakashkum143
+          outputs: |
+            dist/snake.svg
 
-      - name: Push changes
+      - name: Push Snake Animation to output branch
         uses: EndBug/add-and-commit@v9
         with:
-          branch: output
           message: "Generate snake animation"
           add: "dist/snake.svg"
+          default_author: github_actions
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
 
